--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "data-files",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://3nikeru.github.io/data-files/",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@testing-library/jest-dom": "^5.16.5",
